<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    //App name
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_quiz_appName"
        android:text="@string/main_appName"
        android:textSize="@dimen/textsize_main_medium"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/padding_quiz_20dp">
    //User name
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    //Countdown timer
        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/padding_quiz_20dp"/>

    </LinearLayout>
//Question 1
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_quiz_answerLeft"
            android:layout_marginTop="@dimen/margin_quiz_answerTop"
            android:id="@+id/q1_answer">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1_a"
                android:text="@string/quiz_q1A"
                android:checked="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1_b"
                android:text="@string/quiz_q1B"
                android:checked="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1_c"
                android:text="@string/quiz_q1C"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
//Question 2
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_quiz_20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_quiz_answerLeft"
            android:layout_marginTop="@dimen/margin_quiz_answerTop"
            android:id="@+id/q2_answer">
            <CheckBox
                android:id="@+id/q2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2A"/>
            <CheckBox
                android:id="@+id/q2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2B"/>
            <CheckBox
                android:id="@+id/q2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2C"/>
            <CheckBox
                android:id="@+id/q2_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2D"/>
        </LinearLayout>
    </LinearLayout>
//Question 3
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question3"/>
        <EditText
            android:layout_width="@dimen/width_quiz_answerEditText"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/black"
            android:id="@+id/q3_answer"/>
    </LinearLayout>
//Question 4
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question4"/>
        <EditText
            android:layout_width="@dimen/width_quiz_answerEditText"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/black"
            android:id="@+id/q4_answer"/>
    </LinearLayout>
//Question 5
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question5"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_quiz_answerLeft"
            android:layout_marginTop="@dimen/margin_quiz_answerTop"
            android:id="@+id/q5_answer">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5_a"
                android:text="@string/quiz_q5A"
                android:checked="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5_b"
                android:text="@string/quiz_q5B"
                android:checked="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5_c"
                android:text="@string/quiz_q5C"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
//Question 6
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question6"/>
        <EditText
            android:layout_width="@dimen/width_quiz_answerEditText"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/black"
            android:id="@+id/q6_answer"/>
    </LinearLayout>
//Question 7
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_quiz_20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question7"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_quiz_answerLeft"
            android:layout_marginTop="@dimen/margin_quiz_answerTop"
            android:id="@+id/q7_answer">
            <CheckBox
                android:id="@+id/q7_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q7A"/>
            <CheckBox
                android:id="@+id/q7_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q7B"/>
            <CheckBox
                android:id="@+id/q7_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q7C"/>
            <CheckBox
                android:id="@+id/q7_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q7D"/>
        </LinearLayout>
    </LinearLayout>
//Question 8
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question8"/>
        <EditText
            android:layout_width="@dimen/width_quiz_answerEditText"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/black"
            android:id="@+id/q8_answer"/>
    </LinearLayout>
//Question 9
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question9"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_quiz_answerLeft"
            android:layout_marginTop="@dimen/margin_quiz_answerTop"
            android:id="@+id/q9_answer">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q9_a"
                android:text="@string/quiz_q9A"
                android:checked="false"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q9_b"
                android:text="@string/quiz_q9B"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
//Question 10
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_quiz_20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question10"/>
        <EditText
            android:layout_width="@dimen/width_quiz_answerEditText"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/black"
            android:id="@+id/q10_answer"/>
    </LinearLayout>
//Submit button
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_quiz_20dp"
                android:text="@string/quiz_submitBtn"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/padding_quiz_20dp"/>
            <Button
                android:id="@+id/restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_quiz_20dp"
                android:text="@string/quiz_restartBtn"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/padding_quiz_20dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>